dynamic copyright date/unique css

--- a/templates/header.html
+++ b/templates/header.html
@@ -8,8 +8,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700' rel='stylesheet' type='text/css'>
-<link rel=\'stylesheet\' id=\'default_css-css\'  href=\'http://edsource.org/wp-content/themes/nakatomi/style.css\' type=\'text/css\' media=\'all\' />
-<link rel=\'stylesheet\' id=\'default_css-css\'  href=\'http://edsource.org/wp-content/themes/nakatomi/templates/slick/slick.css\' type=\'text/css\' media=\'all\' />
+<link rel='stylesheet' id='default_css-css'  href='http://edsource.org/wp-content/themes/nakatomi/style.css' type='text/css' media='all' />
+<link rel='stylesheet' id='default_css-css'  href='http://edsource.org/wp-content/themes/nakatomi/templates/slick/slick.css' type='text/css' media='all' />
+<link rel='stylesheet' id='default_css-css'  href='http://edsource.org/wp-content/css/lcff-database.css' type='text/css' media='all' />
 <link rel="shortcut icon" href="http://edsource.org/wp-content/themes/nakatomi/styles/graphics/favicon.png">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
