--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,7 +2,7 @@
     <div class="slick-site">
         <h2><a href="http://edsource.org">EdSource</a></h2>
     </div>
-    <div><h2><a href="#"></a></h2></div>
+    <div><h2><a href="http://edsource.org/?p=89272">Local Control Funding Formula Guide</a></h2></div>
     <div class="slick-nav-hed">
         <a href="http://edsource.org/">Search</a>
         <a href="http://edsource.org/">Compare</a>
