--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,14 +2,16 @@
     <div class="slick-site">
         <h2><a href="http://edsource.org">EdSource</a></h2>
     </div>
-    <div><h2><a href="http://edsource.org/?p=89272">Local Control Funding Formula Guide</a></h2></div>
-    <div class="slick-nav-hed">
-        <a href="http://edsource.org/">Search</a>
-        <a href="http://edsource.org/">Compare</a>
-    </div>
-    <div class="slick-social-hed">
+    <div><h2><a href="#">Local Control Funding Database</a></h2></div>
+     <div class="slick-social-hed">
         <a onclick="ga('send\','event\', 'LCFF DATABASE\', 'TWITTER\', '');" href="https://twitter.com/share?url=http%3A%2F%2Fedsource.org%2F%3Fpage_id=&via=edsource&text="><i class="fa fa-twitter"></i></a>
         <a onclick="ga('send\','event\', 'LCFF DATABASE\', 'FB\', '');" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fedsource.org%2F%3Fpage_id="><i class="fa fa-facebook"></i></a>
         <a onclick="ga('send\','event\', 'LCFF DATABASE\', 'LINKED\', '');" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Fedsource.org%2F%3Fpage_id=&title=: &summary=&source=EdSource"><i class="fa fa-linkedin"></i></a>
     </div>
+    <div class="slick-nav-hed">
+        <a href="http://edsource.org/">Search</a>
+        <a href="http://edsource.org/">Compare</a>
+        <a href="http://edsource.org/?p=89272">Guide</a>
+    </div>
+
 </section>
