fixed annoying yaxis issue

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -20,6 +20,6 @@
         </div>
     </body>    
     <script type="text/javascript">
-        barChart.getAttr(null, {{data|safe}}, 'chart1', 400, 300, [50,100,30,40], 'BuPu', false, null, null, '$,', 5, .1, null, null, null, null, 3);
+        barChart.getAttr(null, {{data|safe}}, 'chart1', 400, 300, [50,40,30,50], 'BuPu', false, null, null, '$,', 5, .1, null, 'Local Control Funding Formula Grant Money per Student', null, null, 3);
     </script>
 </html>
