--- a/templates/nav.html
+++ b/templates/nav.html
@@ -9,7 +9,7 @@
         <a onclick="ga('send\','event\', 'LCFF DATABASE\', 'LINKED\', '');" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Fedsource.org%2F%3Fpage_id=&title=: &summary=&source=EdSource"><i class="fa fa-linkedin"></i></a>
     </div>
     <div class="slick-nav-hed">
-        <a href="http://edsource.org/">Search</a>
+        <a href="search.html">Search</a>
         <a href="http://edsource.org/">Compare</a>
         <a href="http://edsource.org/?p=89272">Guide</a>
     </div>
