--- a/css/lcff-database.css
+++ b/css/lcff-database.css
@@ -28,6 +28,17 @@
 #slick-body>div[role="links"] a p {text-align:left;margin: 0 0 1em 0;font-size:1em;color:#555;}
 
 
+/* SEARCH STYLE 
+===========================================*/
+#slick-body>div[role="search"] {}
+	#slick-body>div[role="search"] input {width:100%;}  
+#slick-body>div[role="results"] {max-height: 200px;overflow: scroll;border-bottom: #ddd solid 2px;margin-top: 1em;border-top: #ddd solid 2px;}
+	#slick-body>div[role="results"] div {padding: .5em 0;border-bottom: 1px solid #aaa;}
+	#slick-body>div[role="results"] div:last-of-type {border:none;}
+	#slick-body>div[role="results"] h2 {font-size: .9em;text-align: left;color: #333;}
+	#slick-body>div[role="results"] h4 {font-size: .8em;color: #555;}
+	#slick-body>div[role="results"] a {}
+	#slick-body>div[role="results"] a:hover {text-decoration: none;}
 
 /* TABLE STYLE 
 ===========================================*/
@@ -52,5 +63,6 @@
 
 @media screen and (min-width:1028px){
 	.seventy {width: 70%;margin: 0 auto;}
+	.fifty {width: 50%;margin: 0 auto;}
 	.twenty-five {width: 25%;margin: 0 auto;}
 }
