added featured photo

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,12 @@
     <body>
         <div id="slick-contain">
             {% include 'nav.html' %}
+            <section id="lcff-header"><img src="http://edsource.org/wp-content/uploads/2015/11/lcff-header.jpg"><p>Edsource</p></section>
             <section id="slick-body">              
-                <div role="intro" class="fifty"></div>
+                <div role="intro" class="fifty">
+                    <h2>Local Control Funding Formula Database</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                </div>
                 <div role="search" class="fifty">
                     <div>
                         <h3>Search Districts and Charters</h3>
@@ -24,3 +28,4 @@
     </body>    
 
 </html>
+
