--- a/css/lcff-database.css
+++ b/css/lcff-database.css
@@ -8,6 +8,10 @@
 #slick-header .slick-nav-hed a {margin:0 20px;}
 #slick-header .slick-social-hed {top:-3px;}
 
+#lcff-header {width:100%;margin-top:5em;}
+	#lcff-header img {width:100%;height:auto;}
+	#lcff-header p {text-align: right;margin: 0 1% 0 0;font-size: .8em;}
+
 /* BODY STYLE 
 ===========================================*/
 #slick-body h3 {text-align:center;margin-bottom: 2em;text-transform: uppercase;font-size: 1.5em;}
