moved results for compare to top

--- a/templates/compare.html
+++ b/templates/compare.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"><title>Compare School Districts and Charters | EdSource</title></meta>
         {% include 'header.html' %}
-        <script type="text/javascript" src="http://edsource.org/wp-content/js/lcff-compare-search.js"></script>
+        <script type="text/javascript" src="http://edsource.org/wp-content/themes/nakatomi/scripts/lcff-compare-search.js"></script>
         <link rel="stylesheet" type="text/css" href="http://edsource.org/wp-content/css/charts/bar.css">
         <script type="text/javascript" src="http://edsource.org/wp-content/js/charts/bar-jinja.js"></script>
     </head>
@@ -15,7 +15,6 @@
                     <h2>Compare School Districts and Charters</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                 </div>
-                <div class="temp-charts" id="chart1"></div>
                 <div class="twenty-five" role="choices">
                     <div>
                         <h4>First District/Charter</h4>
@@ -27,7 +26,9 @@
                         <input link="no" class="search-bar" role="1" type="text" style="height:24px;" placeholder="Option 2">
                     </div>
                 </div>
-                <div role="results" class="lcff-results twenty-five" type="0"></div>
+                <div class="twenty-five"><div role="results" class="lcff-results twenty-five" type="0"></div></div>
+                <div class="temp-charts" id="chart1"></div>
+                
             </section>  
             {% include 'footer.html' %}    
         </div>
