--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,7 +2,7 @@
     <div class="slick-site">
         <h2><a href="http://edsource.org">EdSource</a></h2>
     </div>
-    <div><h2><a href="#">Local Control Funding Database</a></h2></div>
+    <div><h2><a href="http://localhost:5000">Local Control Funding Database</a></h2></div>
      <div class="slick-social-hed">
         <a onclick="ga('send\','event\', 'LCFF DATABASE\', 'TWITTER\', '');" href="https://twitter.com/share?url=http%3A%2F%2Fedsource.org%2F%3Fpage_id=&via=edsource&text="><i class="fa fa-twitter"></i></a>
         <a onclick="ga('send\','event\', 'LCFF DATABASE\', 'FB\', '');" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fedsource.org%2F%3Fpage_id="><i class="fa fa-facebook"></i></a>
@@ -10,7 +10,7 @@
     </div>
     <div class="slick-nav-hed">
         <a href="search.html">Search</a>
-        <a href="http://edsource.org/">Compare</a>
+        <a href="http://localhost:5000/compare-districts-charters.html">Compare</a>
         <a href="http://edsource.org/?p=89272">Guide</a>
     </div>
 
